Fix picture borders on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -41,9 +41,11 @@ div.figure a{
     border: none;
 }
 
-div.flickr img {
-    border: 1px solid #888;
-    padding: 6px;
+@media all and (min-width: 620px) {
+    div.flickr img {
+        border: 1px solid #888;
+        padding: 6px;
+    }
 }
 
 div.flickr {
